--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Roboto:wght@400;700&display=swap');
+
+$mainmenu-linkcolor: #ffcb69; 
+$mainmenu-linkcolor-hover: #ffcb69; 
+
 html {
     box-sizing: border-box;
   }
@@ -9,14 +14,11 @@ html {
   body {
     background: #57574b;
     color: rgb(44, 43, 43);
-    /*display: flex;
-    align-items: center;
-    justify-content: center;*/
     min-height: 100vh;
-    font-family: 'Rubik', sans-serif;
+    font-family: 'Libre Baskerville', serif;
   }
   
-  ul {
+  .navigation ul {
     list-style: outside none none;
     margin: 0;
     padding: 0;
@@ -57,14 +59,21 @@ html {
     right: 16px; }
   
   .navigation__link {
-    color: #ffcb69;
+    font-size: 20px;
+    color: $mainmenu-linkcolor;
     display: block;
     margin-bottom: 10px;
     text-decoration: none;
+    &--drop {
+      font-size: 16px;
+      color: black;
+      text-decoration: none;
+    }
   }
   
   .navigation__link:hover {
-    color: #FFCB69; }
+    color: $mainmenu-linkcolor-hover;
+  }
   
   
 
@@ -72,17 +81,17 @@ html {
 
 
     
-    $min-width: 120px;
+    $min-width: 150px;
     $maincolor: #6BBE92;  
     $secondarycolor: #3E8760;
     
-    @mixin transform($value){
+    @mixin drop-menu-transform($value){
       -webkit-transform: ($value);
          -moz-transform: ($value);
           -ms-transform: ($value);
               transform: ($value);
     }
-    @mixin transition($value){
+    @mixin drop-menu-transition($value){
       -webkit-transition: ($value);
          -moz-transition: ($value);
           -ms-transition: ($value);
@@ -93,7 +102,7 @@ html {
     #main-menu-ul{
       position: relative;
       list-style: none;
-      background: $maincolor;
+      background: inherit;
       font-weight: 400;
       font-size: 0;
       text-transform: uppercase;
@@ -122,8 +131,8 @@ html {
         left: 0;
         top: 48px;
         div{
-          @include transform(translate(0,-100%));
-          @include transition(all 0.5s 0.1s);
+          @include drop-menu-transform(translate(0,-100%));
+          @include drop-menu-transition(all 0.5s 0.1s);
           position: relative;
         }
         li{
@@ -134,22 +143,22 @@ html {
         }
       }
     #main-menu-marker{
-      height: 6px;
-      background: $secondarycolor !important;
+      height: 5px;
+      background: $mainmenu-linkcolor;
       position: absolute;
       bottom: 0;
       width: $min-width;
       z-index: 2;
-      @include transition(all 0.35s);
+      @include drop-menu-transition(all 0.35s);
     }
     
     @for $i from 1 through 4{
       #main-menu-ul li:nth-child(#{$i}){
         &:hover ul div{
-         @include transform(translate(0,0)); 
+         @include drop-menu-transform(translate(0,0)); 
         }
         &:hover ~ #main-menu-marker{
-          @include transform(translate(#{(-1+$i)*$min-width},0));
+          @include drop-menu-transform(translate(#{(-1+$i)*$min-width},0));
         }
       }    
     }
