--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,17 +1,28 @@
-@import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Roboto:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&&family=Nunito+Sans:wght@300;600&display=swap");
 @import "scss/animista.scss";
 
 
 $backgroundcolor-green: #797d62;
 $backgroundcolor-green-brighter: #9b9b7a;
-
+$backgroundcolor-yellow-intense: #ffcb69;
 $backgroundcolor-yellow: #f1dca7;
+$backgroundcolor-brown-light: #997b66;
 
+$topmenu-linkcolor: #ffcb69cb;
 $mainmenu-linkcolor: #ffcb69;
 $mainmenu-linkcolor-hover: #ffcb69;
+
 $buttoncolor: #ffcb69;
 $buttoncolor-hover: #ffcb69;
+$buttoncolor-dark: #d08c60;
+$buttoncolor-dark-text: #f1efe3;
+
+$happy-yellow: #ffb323;
+
 $textcolor-light: #f8e8cb;
+$textcolor-dark: #594437;
+
+
 
 
 $brownlight: #997b66;
@@ -33,8 +44,30 @@ body {
   font-family: "Libre Baskerville", serif;
 }
 
+h2 {
+  text-transform: uppercase;
+  letter-spacing: 0.01em;
+  font-weight: normal;
+}
+
+p {
+  line-height: 1.45em;
+}
+
+a {
+  text-decoration: none;
+}
+
 button {
-  font-family: Roboto, Verdana, sans-serif;
+  font-family: "Nunito Sans", Verdana, sans-serif;
+  background-color: $buttoncolor;
+  border-radius: 3px;
+  color: $brownlight;
+  border: none;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding: 20px 60px;
+  margin: 40px 0;
 }
 
 .navigation ul {
@@ -52,6 +85,28 @@ button {
 .main {
 }
 
+.top-header {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-end;
+  align-items: center;
+  background: $backgroundcolor-brown-light;
+  padding: 2px 20px;
+  height: 42px;
+  &__link {
+    color: $topmenu-linkcolor;
+    margin-right: 20px;
+    font-size: 14px;
+    &--mail::before {
+      content: "mail: ";
+    }
+    &--tel::before {
+      content: "tel: ";
+    }
+  }
+}
+
+
 .main-header {
   display: flex;
   flex-flow: row;
@@ -59,7 +114,7 @@ button {
   justify-content: space-between;
   align-items: center;
   background: #797d62;
-  padding: 20px 80px;
+  padding: 0 80px;
 }
 
 .main-header__logo {
@@ -81,16 +136,17 @@ button {
 }
 
 .navigation__link {
-  font-size: 20px;
+  font-size: 18px;
   color: $mainmenu-linkcolor;
   display: block;
   margin-bottom: 10px;
-  text-decoration: none;
   &--drop {
     font-size: 16px;
     color: black;
-    text-decoration: none;
   }
+  &--discreet { 
+    color: #d08c60;
+   }
 }
 
 .navigation__link:hover {
@@ -181,15 +237,20 @@ li {
 .main-content {
 }
 
+.slider {
+  overflow: hidden;
+}
+
 .offer {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 600px));
+  grid-template-columns: repeat(3, minmax(200px, 600px));
   column-gap: 20px;
   row-gap: 20px;
+  padding: 0;
   justify-content: center;
 }
 .offer-article {
-  padding: 40px 20px;
+  padding: 160px 80px;
   background-color: $backgroundcolor-green;
   text-align: center;
   &--even {
@@ -198,24 +259,20 @@ li {
   &__header {
   }
   &__heading {
-    font-size: 34px;
+    font-size: 32px;
     color: $textcolor-light;
-    text-transform: uppercase;
-    letter-spacing: 0.01em;
-    font-weight: normal;
   }
   &__thumb {
     border-radius: 50%;
-    border: 7px solid $brownlight;
+    border: 5px solid $happy-yellow;
   }
   &__text {
+    color: $textcolor-light;
   }
   &__button {
     border-radius: 3px;
     background-color: $buttoncolor;
   }
-
-  
 }
 
 
@@ -226,23 +283,71 @@ li {
   justify-content: center;
 }
 .about-article {
-  padding: 40px 20px;
+  padding: 160px 20px;
   text-align: center;
+  &__text {
+    max-width: 800px;
+    color: $textcolor-dark;
+  }
+  &__image {
+    border-radius: 3px;
+  }
 }
 
-.article {
-  grid-area: article;
+.contact {
+  background-color: $backgroundcolor-yellow-intense;
+  padding: 100px 0 0;
+
+  &__header {
+    text-align: center;
+  }
+  &__heading {
+    font-size: 32px;
+    color: $textcolor-dark;
+  }
+  &__info {
+    max-width: 800px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 280px 1fr;
+    grid-column-gap: 80px;
+    padding: 0 0 100px;
+    font-family: "Nunito Sans", serif;
+  }
+  &__col1 {
+    justify-self: end;
+  }
+  &__col2 {
+    justify-self: center;
+  }
+  &__col3 {
+    justify-self: start;
+    align-self: end;
+  }
+  &__heading3 {
+    color: $textcolor-dark;
+    font-size: 22px;
+  }
+  &__text {
+    color: $textcolor-dark;
+    font-size: 20px;
+  }
+  &__link {
+    color: $textcolor-dark;
+    &--expose {
+      font-size: 24px;
+      font-weight: 600;
+    }
+  }
+  &__button {
+    border-radius: 3px;
+    background-color: $buttoncolor-dark;
+    color: $buttoncolor-dark-text;
+  }
 }
 
-.aside {
-  grid-area: aside;
-  padding: 10px;
-  background: tomato;
-}
 
-.footer {
-  grid-area: footer;
-}
+
 
 @media screen and (min-width: 480px) {
   .main {
