--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Roboto:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&&family=Nunito+Sans:wght@300;600&display=swap");
 .focus-in-contract-bck {
   -webkit-animation: focus-in-contract-bck 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
   animation: focus-in-contract-bck 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; }
@@ -58,8 +58,27 @@ body {
   min-height: 100vh;
   font-family: "Libre Baskerville", serif; }
 
+h2 {
+  text-transform: uppercase;
+  letter-spacing: 0.01em;
+  font-weight: normal; }
+
+p {
+  line-height: 1.45em; }
+
+a {
+  text-decoration: none; }
+
 button {
-  font-family: Roboto, Verdana, sans-serif; }
+  font-family: "Nunito Sans", Verdana, sans-serif;
+  background-color: #ffcb69;
+  border-radius: 3px;
+  color: #997b66;
+  border: none;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding: 20px 60px;
+  margin: 40px 0; }
 
 .navigation ul {
   list-style: outside none none;
@@ -71,6 +90,23 @@ button {
   float: left;
   position: relative; }
 
+.top-header {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-end;
+  align-items: center;
+  background: #997b66;
+  padding: 2px 20px;
+  height: 42px; }
+  .top-header__link {
+    color: #ffcb69cb;
+    margin-right: 20px;
+    font-size: 14px; }
+    .top-header__link--mail::before {
+      content: "mail: "; }
+    .top-header__link--tel::before {
+      content: "tel: "; }
+
 .main-header {
   display: flex;
   flex-flow: row;
@@ -78,7 +114,7 @@ button {
   justify-content: space-between;
   align-items: center;
   background: #797d62;
-  padding: 20px 80px; }
+  padding: 0 80px; }
 
 .main-header__logo {
   margin-left: 0px; }
@@ -95,15 +131,15 @@ button {
   right: 16px; }
 
 .navigation__link {
-  font-size: 20px;
+  font-size: 18px;
   color: #ffcb69;
   display: block;
-  margin-bottom: 10px;
-  text-decoration: none; }
+  margin-bottom: 10px; }
   .navigation__link--drop {
     font-size: 16px;
-    color: black;
-    text-decoration: none; }
+    color: black; }
+  .navigation__link--discreet {
+    color: #d08c60; }
 
 .navigation__link:hover {
   color: #ffcb69; }
@@ -214,28 +250,31 @@ li {
   -ms-transform: translate(450px, 0);
   transform: translate(450px, 0); }
 
+.slider {
+  overflow: hidden; }
+
 .offer {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 600px));
+  grid-template-columns: repeat(3, minmax(200px, 600px));
   column-gap: 20px;
   row-gap: 20px;
+  padding: 0;
   justify-content: center; }
 
 .offer-article {
-  padding: 40px 20px;
+  padding: 160px 80px;
   background-color: #797d62;
   text-align: center; }
   .offer-article--even {
     background-color: #9b9b7a; }
   .offer-article__heading {
-    font-size: 34px;
-    color: #f8e8cb;
-    text-transform: uppercase;
-    letter-spacing: 0.01em;
-    font-weight: normal; }
+    font-size: 32px;
+    color: #f8e8cb; }
   .offer-article__thumb {
     border-radius: 50%;
-    border: 7px solid #997b66; }
+    border: 5px solid #ffb323; }
+  .offer-article__text {
+    color: #f8e8cb; }
   .offer-article__button {
     border-radius: 3px;
     background-color: #ffcb69; }
@@ -247,19 +286,52 @@ li {
   justify-content: center; }
 
 .about-article {
-  padding: 40px 20px;
+  padding: 160px 20px;
   text-align: center; }
+  .about-article__text {
+    max-width: 800px;
+    color: #594437; }
+  .about-article__image {
+    border-radius: 3px; }
 
-.article {
-  grid-area: article; }
-
-.aside {
-  grid-area: aside;
-  padding: 10px;
-  background: tomato; }
-
-.footer {
-  grid-area: footer; }
+.contact {
+  background-color: #ffcb69;
+  padding: 100px 0 0; }
+  .contact__header {
+    text-align: center; }
+  .contact__heading {
+    font-size: 32px;
+    color: #594437; }
+  .contact__info {
+    max-width: 800px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 280px 1fr;
+    grid-column-gap: 80px;
+    padding: 0 0 100px;
+    font-family: "Nunito Sans", serif; }
+  .contact__col1 {
+    justify-self: end; }
+  .contact__col2 {
+    justify-self: center; }
+  .contact__col3 {
+    justify-self: start;
+    align-self: end; }
+  .contact__heading3 {
+    color: #594437;
+    font-size: 22px; }
+  .contact__text {
+    color: #594437;
+    font-size: 20px; }
+  .contact__link {
+    color: #594437; }
+    .contact__link--expose {
+      font-size: 24px;
+      font-weight: 600; }
+  .contact__button {
+    border-radius: 3px;
+    background-color: #d08c60;
+    color: #f1efe3; }
 
 @media screen and (min-width: 480px) {
   .aside {
