--- a/styles/style.css
+++ b/styles/style.css
@@ -45,7 +45,8 @@
     opacity: 1; } }
 
 html {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  line-height: 0; }
 
 *,
 *:before,
@@ -54,9 +55,12 @@ html {
 
 body {
   background: #797d62;
-  color: #2c2b2b;
+  color: #f8e8cb;
   min-height: 100vh;
   font-family: "Libre Baskerville", serif; }
+
+h1, h2, h3, h4, h5, h6 {
+  line-height: 1.15em; }
 
 h2 {
   text-transform: uppercase;
@@ -80,6 +84,9 @@ button {
   padding: 20px 60px;
   margin: 40px 0; }
 
+button:hover {
+  background-color: #ffe2ad; }
+
 .navigation ul {
   list-style: outside none none;
   margin: 0;
@@ -89,6 +96,9 @@ button {
   display: block;
   float: left;
   position: relative; }
+
+.main {
+  overflow: hidden; }
 
 .top-header {
   display: flex;
@@ -294,6 +304,9 @@ li {
   .about-article__image {
     border-radius: 3px; }
 
+.testimonials {
+  margin: 0; }
+
 .contact {
   background-color: #ffcb69;
   padding: 100px 0 0; }
@@ -301,7 +314,8 @@ li {
     text-align: center; }
   .contact__heading {
     font-size: 32px;
-    color: #594437; }
+    color: #594437;
+    margin-bottom: 80px; }
   .contact__info {
     max-width: 800px;
     margin: 0 auto;
@@ -332,6 +346,28 @@ li {
     border-radius: 3px;
     background-color: #d08c60;
     color: #f1efe3; }
+  .contact__button:hover {
+    background-color: #f1b48b; }
+
+.fund-info {
+  background-color: #997b66;
+  padding: 120px 0;
+  text-align: center; }
+  .fund-info__text {
+    max-width: 800px;
+    color: #fcf8ef;
+    font-size: 0.8em;
+    margin: 0 auto 20px; }
+
+.footer {
+  background-color: #5a4131;
+  padding: 120px 0;
+  text-align: center; }
+  .footer__text {
+    max-width: 800px;
+    color: #fcf8ef;
+    font-size: 1em;
+    margin: 0 auto 20px; }
 
 @media screen and (min-width: 480px) {
   .aside {
