--- a/scss/main.scss
+++ b/scss/main.scss
@@ -117,18 +117,40 @@ button:hover {
 }
 
 .main-header {
+  width: 100vw;
+  height: 140px;
   display: flex;
   flex-flow: row;
   align-content: center;
   justify-content: space-between;
   align-items: center;
-  background: #797d62;
+  background: $backgroundcolor-green;
   padding: 0 80px;
+  -webkit-transition: all 0.4s ease;
+ 	transition: all 0.4s ease;
+}
+
+.shrink-and-sticky {
+  height: 60px;
+  position: fixed;
+  top: 0;
+  background: $browndarker;
+}
+
+.shrink-and-sticky .main-header__logo-img {
+  height: 90%;
+}
+
+.shrink-and-sticky .navigation__link {
+  font-size: 15px;
 }
 
 .main-header__logo {
-  margin-left: 0px;
+  margin-left: 0;
+  height: 100%;
 }
+
+
 
 .navigation {
   display: none;
