--- a/styles/style.css
+++ b/styles/style.css
@@ -155,7 +155,7 @@ button:hover {
   align-items: center;
   background: #997b66;
   padding: 2px 20px;
-  height: 42px; }
+  height: 32px; }
   .top-header__link {
     color: #ffe2ad;
     margin-right: 20px;
@@ -212,12 +212,13 @@ button:hover {
   right: 16px; }
 
 .navigation__link {
-  font-size: 18px;
+  font-size: 16px;
   color: #ffcb69;
   display: block;
   margin-bottom: 10px; }
   .navigation__link--drop {
-    font-size: 16px;
+    line-height: 1.45em;
+    font-size: 15px;
     color: black; }
   .navigation__link--discreet {
     color: #d08c60; }
@@ -242,7 +243,8 @@ button:hover {
     padding: 15px 20px;
     cursor: pointer;
     z-index: 5;
-    min-width: 150px; }
+    min-width: 170px;
+    width: auto; }
 
 li {
   margin: 0; }
@@ -269,14 +271,23 @@ li {
     display: block;
     padding: 0;
     width: 100%;
-    background: #3e8760 !important; }
+    background: #3e8760; }
+  .main-menu-drop li:hover {
+    background-color: #6bbe92; }
+
+/* .main-menu-drop li:hover {background-color: #6bbe92;} */
+.navigation__listitem--drop {
+  border-bottom: 1px solid #5a4131; }
+
+.navigation__listitem--drop:hover {
+  background-color: #f1b48b; }
 
 #main-menu-marker {
   height: 5px;
   background: #ffcb69;
   position: absolute;
   bottom: 0;
-  width: 150px;
+  width: 170px;
   z-index: 2;
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
@@ -302,10 +313,10 @@ li {
   transform: translate(0, 0); }
 
 #main-menu-ul li:nth-child(2):hover ~ #main-menu-marker {
-  -webkit-transform: translate(150px, 0);
-  -moz-transform: translate(150px, 0);
-  -ms-transform: translate(150px, 0);
-  transform: translate(150px, 0); }
+  -webkit-transform: translate(170px, 0);
+  -moz-transform: translate(170px, 0);
+  -ms-transform: translate(170px, 0);
+  transform: translate(170px, 0); }
 
 #main-menu-ul li:nth-child(3):hover ul div {
   -webkit-transform: translate(0, 0);
@@ -314,10 +325,10 @@ li {
   transform: translate(0, 0); }
 
 #main-menu-ul li:nth-child(3):hover ~ #main-menu-marker {
-  -webkit-transform: translate(300px, 0);
-  -moz-transform: translate(300px, 0);
-  -ms-transform: translate(300px, 0);
-  transform: translate(300px, 0); }
+  -webkit-transform: translate(340px, 0);
+  -moz-transform: translate(340px, 0);
+  -ms-transform: translate(340px, 0);
+  transform: translate(340px, 0); }
 
 #main-menu-ul li:nth-child(4):hover ul div {
   -webkit-transform: translate(0, 0);
@@ -326,13 +337,13 @@ li {
   transform: translate(0, 0); }
 
 #main-menu-ul li:nth-child(4):hover ~ #main-menu-marker {
-  -webkit-transform: translate(450px, 0);
-  -moz-transform: translate(450px, 0);
-  -ms-transform: translate(450px, 0);
-  transform: translate(450px, 0); }
+  -webkit-transform: translate(510px, 0);
+  -moz-transform: translate(510px, 0);
+  -ms-transform: translate(510px, 0);
+  transform: translate(510px, 0); }
 
 .slider {
-  min-height: 660px;
+  min-height: 629px;
   display: flex;
   justify-content: center;
   align-items: center; }
