--- a/scss/main.scss
+++ b/scss/main.scss
@@ -136,6 +136,7 @@ button:hover {
   background: $brown;
   opacity: 0.93;
   padding: 0 80px;
+  z-index: 10;
   -webkit-transition: all 0.4s ease;
   transition: all 0.4s ease;
 }
@@ -343,7 +344,7 @@ li {
   }
   &__thumb {
     border-radius: 50%;
-    border: 5px solid $happy-yellow;
+    border: 1px solid $brown;
   }
   &__text {
     color: $whiteyellow;
